Fix responsivnes bug on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,7 +412,7 @@ textarea {
 
     #overlay {
         left: 0;
-        width: 70%;
+        width: 100%;
         height: 40%;
     }
 
@@ -466,6 +466,12 @@ textarea {
 }
 
 @media screen and (max-width: 400px) {
+    #overlay {
+        left: 0;
+        width: 100%;
+        height: 600px;
+    }
+
     #menu {
         margin-top: 150px;
         margin-bottom: 200px;
